# cpp-code-review

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  LICENSE  LLM_INTEGRATION_GUIDE.md  README.md  build.sh
.circleci/: config.yml
.github/workflows/: code-review.yml  pr-review-example.yml
docs/: CI-CD-Integration.md  Quick-Start.md  README.md  V3.0-Features.md
examples/: .cpp-agent.yml  good_code.cpp  test_code.cpp  v1.5_features.cpp  v2.0_features.cpp
scripts/: pr-review.sh
src/: main.cpp
src/analysis/: taint_analysis.cpp  taint_analysis.h
src/cli/: cli.cpp  cli.h
src/config/: config.cpp  config.h
src/fixer/: auto_fixer.cpp  auto_fixer.h
src/git/: git_integration.cpp  git_integration.h
src/llm/: api_client.cpp  api_client.h  llm_enhancer.cpp  llm_enhancer.h
src/parser/: ast_parser.cpp  ast_parser.h
src/report/: html_reporter.cpp  html_reporter.h  reporter.cpp  reporter.h
src/rules/: assignment_in_condition_rule.cpp  assignment_in_condition_rule.h  buffer_overflow_rule.cpp  buffer_overflow_rule.h  integer_overflow_rule.cpp  integer_overflow_rule.h  loop_copy_rule.cpp  loop_copy_rule.h  memory_leak_rule.cpp  memory_leak_rule.h  null_pointer_rule.cpp  null_pointer_rule.h  rule.h  rule_engine.cpp  rule_engine.h  smart_pointer_rule.cpp  smart_pointer_rule.h  uninitialized_var_rule.cpp  uninitialized_var_rule.h  unsafe_c_functions_rule.cpp  unsafe_c_functions_rule.h  use_after_free_rule.cpp  use_after_free_rule.h
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
